--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-.idea
-.gradle
+# Gradle files
+.gradle/
+build/
+
+# IntelliJ
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
